# python-compose

./: .appdev  .appdev.ps1  .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
docs/: application.md
src/app/: app.py  server.py
tests/: conftest.py
