[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your@email.address"},
]
description = "A Python template application."
readme = "README.md"
requries-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://yourwebsite.com"
Issues = "https://yourwebsite.com"

[tool.hatch.build.targets.wheel.sources]
"app" = "app"

[tool.hatch.build.targets.wheel]
packages = ["app"]